@@ -1,4 +1,7 @@
 v1.??? -
+Modified:
+* Callbacks:
+	- MC_PRE_PLAYERHUD_TRINKET_RENDER: now provides [Vector] CropOffset parameter and accepts CropOffset vector in the return table.
 Additions:
 * EntityPlayer:
 	- Get/SetBombPlaceDelay
